<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvApartado1" />

        <EditText
            android:id="@+id/edtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvApartado2" />

        <EditText
            android:id="@+id/edtDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo2"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtnDuo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnDuo" />

            <RadioButton
                android:id="@+id/rbtnTrio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnTrio" />

            <RadioButton
                android:id="@+id/rbtonCamaras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnCamaras" />

            <RadioButton
                android:id="@+id/rbtnARobos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnAntiRobo" />

            <RadioButton
                android:id="@+id/rbtnAIncendio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnAntiIncendios" />

            <RadioButton
                android:id="@+id/rbtnCercos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtnCercos" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCostoServicios" />

        <TextView
            android:id="@+id/tvCostoServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrecioCero" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCostoInstalacion" />

        <TextView
            android:id="@+id/tvCostoInstalacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrecioCero" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescuento" />

        <TextView
            android:id="@+id/tvDescuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrecioCero" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTotalPagar" />

        <TextView
            android:id="@+id/tvTotalPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrecioCero" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Calcular" />

            <Button
                android:id="@+id/btnImprimir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Imprimir" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>